# projectstudio

./: .gitignore  Cargo.toml  README.md
curvessurfaces/: Cargo.toml  README.md  cvplt.py
curvessurfaces/src/: camera.rs  main.rs  render.rs  shader.wgsl  swpparse.rs
curvessurfaces/swps/: my-file.swp
hierarchicalmodeling/: Cargo.toml  README.md
hierarchicalmodeling/src/: camera.rs  main.rs  model.rs  render.rs  shader.wgsl
obj-viewer/: Cargo.toml  README.md
obj-viewer/src/: camera.rs  main.rs  objparse.rs  render.rs  shader.wgsl
particles/: Cargo.toml  README.md  run.sh
particles/src/: camera.rs  main.rs  render.rs  shader.wgsl
raycasting/: Cargo.toml  README.md
raycasting/scenes/: scene01_plane.txt  scene02_cube.txt  scene06_bunny_1k_raytraced.txt  scene09_s.txt  scene10_sphere.txt  scene11_cube.txt  scene12_vase.txt  scene13_diamond.txt
raycasting/src/: gpu.rs  main.rs  perspective.rs  scene.rs  shader.wgsl
realtime/: Cargo.toml  README.md
realtime/heightmaps/: go-here-for-heightmaps.txt  islandgenerator.py
realtime/src/: chunk.rs  heightmap.rs  input.rs  main.rs  render.rs  shader.wgsl  water.rs
