[package]
name = "obj-viewer"
version = "0.1.0"
edition = "2021"
#resolver = "2"

[dependencies]
#ash = "0.37.0+1.3.209"
#ash-window = "0.11.0"
#gpu-alloc-ash = "0.5.0"
futures = "0.3.24"
log = "0.4.17"
nalgebra = "0.31.1"
#naga = { version = "0.9.0", features = ["glsl-in", "wgsl-in", "spv-in", "spv-out", "validate"]}#, "serialize", "deserialize"] }
# pico-args = "0.5.0"
#raw-window-handle = "0.4.2"
# ron = "0.8.0"
# serde = { version = "1.0.144", features = ["derive"] }
simple_logger = "2.3.0"
wgpu = { version = "0.13.0" }#, features = [] }
winit = { version = "0.27.2" } #, features = ["serde"] }
