[package]
name = "particles"
version = "0.1.0"
edition = "2021"

[dependencies]

# has an RK4 implementation
# that the assignment is supposed to give me
# probably not gonna use it though
#ode_solvers = "0.3.7"

futures = "0.3.24"
log = "0.4.17"
nalgebra = "0.31.1"
#rayon = "1.5.3"
simple_logger = "2.3.0"
wgpu = { version = "0.13.0" }#, features = [] }
winit = { version = "0.27.2" } #, features = ["serde"] }
