[package]
name = "raycasting"
version = "0.1.0"
edition = "2021"

[dependencies]

arrayvec = "0.7.2"
futures = "0.3.24"
image = "0.24.5"
log = "0.4.17"
nalgebra = "0.31.1"
png = "0.17.7"
simple_logger = "2.3.0"
tobj = "3.2.3"
wgpu = { version = "0.15.0" }#, features = [] }
winit = { version = "0.27.2" } #, features = ["serde"] }
